--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -138,7 +138,7 @@ jobs:
         if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
         uses: akto-api-security/run-scan@v1.0.3
         with:
-          AKTO_DASHBOARD_URL: ${{vars.AKTO_DASHBOARD_URL}}
+          AKTO_DASHBOARD_URL: https://flash.staging.akto.io
           AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
           AKTO_TEST_ID: 64f025c28858442a897032c3
 
