--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -145,7 +145,7 @@ jobs:
       - name: Check for Akto test completion
         if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
         env:
-          AKTO_DASHBOARD_URL: ${{vars.AKTO_DASHBOARD_URL}}
+          AKTO_DASHBOARD_URL: https://flash.staging.akto.io
           AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
           AKTO_TEST_ID: 64f025c28858442a897032c3
         run: bash ./.github/workflows/akto-cicd.sh
