--- a/.github/workflows/beamerAndDiscord.yml
+++ b/.github/workflows/beamerAndDiscord.yml
@@ -18,6 +18,7 @@ jobs:
           python3 - <<EOF
           import os
           import requests
+          import json
           
           github_token = os.getenv('GITHUB_TOKEN')
           repo_owner = 'akto-api-security'
