--- a/.github/workflows/beamerAndDiscord.yml
+++ b/.github/workflows/beamerAndDiscord.yml
@@ -27,11 +27,19 @@ jobs:
 
           tag_name = data.get('tag_name')
           description = data.get('body')
+          print("description", description)
           description_lines = description.split('\n') if description else []
           description_lines = [line.strip() for line in description_lines if line.strip()]
 
-          slack_message_body = "{ 'blocks': [ { 'type': 'header', 'text': { 'type': 'plain_text', 'text': "+repo_name+" } }, { 'type': 'section', 'text': { 'type': 'mrkdwn', 'text': "+tag_name+" } }, { 'type': 'section', 'text': { 'type': 'mrkdwn', 'text': '```"+description+"```' } } ] }";
+          slack_message_body = "{ 'blocks': [ { 'type': 'header', 'text': { 'type': 'plain_text', 'text': "
+          slack_message_body += repo_name
+          slack_message_body += " } }, { 'type': 'section', 'text': { 'type': 'mrkdwn', 'text': "
+          slack_message_body += tag_name
+          slack_message_body += " } }, { 'type': 'section', 'text': { 'type': 'mrkdwn', 'text': '```"
+          slack_message_body += description
+          slack_message_body += "```' } } ] }";
 
+          print("slack_message_body", slack_message_body)
           
           print(f"::set-output name=tag_name::{tag_name}")
           print(f"::set-output name=slack_message_body::{slack_message_body}")
