--- a/.github/workflows/beamerAndDiscord.yml
+++ b/.github/workflows/beamerAndDiscord.yml
@@ -37,7 +37,7 @@ jobs:
           slack_message_body += tag_name
           slack_message_body += " } }, { 'type': 'section', 'text': { 'type': 'mrkdwn', 'text': '```"
           slack_message_body += description
-          slack_message_body += "```' } } ] }";
+          slack_message_body += "```' } } ] }"
 
           print("slack_message_body", slack_message_body)
           
