use string literal

--- a/.github/workflows/beamerAndDiscord.yml
+++ b/.github/workflows/beamerAndDiscord.yml
@@ -35,9 +35,9 @@ jobs:
           slack_message_body += repo_name
           slack_message_body += " } }, { 'type': 'section', 'text': { 'type': 'mrkdwn', 'text': "
           slack_message_body += tag_name
-          slack_message_body += " } }, { 'type': 'section', 'text': { 'type': 'mrkdwn', 'text': '"
+          slack_message_body += r" } }, { 'type': 'section', 'text': { 'type': 'mrkdwn', 'text': '```"
           slack_message_body += '\\n'.join(description_lines)
-          slack_message_body += "' } } ] }"
+          slack_message_body += r"```' } } ] }"
 
           print("slack_message_body", slack_message_body)
           
