--- a/.github/workflows/beamerAndDiscord.yml
+++ b/.github/workflows/beamerAndDiscord.yml
@@ -26,7 +26,7 @@ jobs:
           data = response.json()
 
           tag_name = data.get('tag_name')
-          description = data.get('body')
+          description = data.get('body').replace("'", "")
           print("description", description)
           description_lines = description.split('\n') if description else []
           description_lines = [line.strip() for line in description_lines if line.strip()]
