--- a/.github/workflows/beamerAndDiscord.yml
+++ b/.github/workflows/beamerAndDiscord.yml
@@ -36,9 +36,9 @@ jobs:
           slack_message_body += " } }, { 'type': 'section', 'text': { 'type': 'mrkdwn', 'text': "
           slack_message_body += tag_name
           slack_message_body += " } }, { 'type': 'section', 'text': { 'type': 'mrkdwn', 'text': '"
-          slack_message_body += ('\\n'.join(description_lines))
+          slack_message_body += ('%0A'.join(description_lines))
           slack_message_body += "' } } ] }"
-          slack_message_body = slack_message_body.replace("\n", "%0A")
+          slack_message_body = slack_message_body
 
           print("slack_message_body", slack_message_body)
           
