--- a/.github/workflows/beamerAndDiscord.yml
+++ b/.github/workflows/beamerAndDiscord.yml
@@ -58,7 +58,7 @@ jobs:
         uses: slackapi/slack-github-action@v1.23.0
         with:
           payload: 
-             ${{toJSON(steps.get_latest_release.outputs.slack_message_body)}}
+             "${{toJSON(steps.get_latest_release.outputs.slack_message_body)}}"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
