--- a/.github/workflows/beamerAndDiscord.yml
+++ b/.github/workflows/beamerAndDiscord.yml
@@ -52,4 +52,4 @@ jobs:
         run: |
           echo "Tag Name: ${{ steps.get_latest_release.outputs.tag_name }}"
           payload=`echo ${{ toJSON(steps.get_latest_release.outputs.slack_message_body) }}`
-          curl -X POST -H "Content-Type: application/json" -d '${payload}' https://eo75m8xey7ghrd9.m.pipedream.net
+          curl -X POST -H "Content-Type: application/json" -d "${payload}" https://eo75m8xey7ghrd9.m.pipedream.net
