--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -121,11 +121,37 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment: Dev
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+    - uses: actions/checkout@v2
+    - uses: aws-actions/configure-aws-credentials@v1
+      with:
+        role-to-assume: ${{ secrets.IAMROLE_GITHUB }}
+        role-session-name: GitHub-Action-Role
+        aws-region: ${{ vars.AWS_REGION }}
+    - name: Deploy to flash
+      if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
+      run: |
+        echo "Deploying branch ${{ env.GITHUB_REF }} to ${{ github.event.inputs.environment }}"
+        commit_hash=`git rev-parse HEAD`
+        aws deploy create-deployment --application-name CodeDeployAppNameWithASG --deployment-group-name CodeDeployGroupName --github-location repository=$GITHUB_REPOSITORY,commitId=$commit_hash --ignore-application-stop-failures
+
+  test:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
       - name: Run CI/CD tests
         if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
-        uses: oren-akto/akto-github-action@v1.0.0
+        uses: akto-api-security/run-scan@v1.0.3
         with:
           AKTO_DASHBOARD_URL: ${{vars.AKTO_DASHBOARD_URL}}
-          AKTO_API_KEY: ${{vars.AKTO_API_KEY}}
+          AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
           AKTO_TEST_ID: ${{vars.AKTO_TEST_ID}}
           START_TIME_DELAY: 180
