--- a/apps/dashboard/web/polaris_web/package.json
+++ b/apps/dashboard/web/polaris_web/package.json
@@ -20,6 +20,7 @@
     "highcharts-react-official": "^3.2.0",
     "html-react-parser": "^4.0.0",
     "immer": "^10.0.2",
+    "leven": "^4.0.0",
     "monaco-editor": "^0.40.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
