--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -124,7 +124,7 @@ jobs:
         if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
         working-directory: ./.github/workflows
         env:
-          AKTO_DASHBOARD_URL: ${{secrets.AKTO_DASHBOARD_URL}}
+          AKTO_DASHBOARD_URL:  https://flash.staging.akto.io
           AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
         run: |
           npm install
